# labzen

./: .gitignore  CONDUCT.rst  CONTRIBUTING.rst  Contributors.md  LICENSE  README.md  pyproject.toml
.github/workflows/: deploy.yml
data-raw/: dummylab.Rmd  dummylab.ipynb
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  token.rst  usage.rst
docs/source/: labzen.rst  modules.rst
labzen/: labzen.py
mdspyutils/: mdspyutils.py
tests/: test_labzen.py  test_mdspyutils.py
workflows/: build.yml  deploy.yml
