[tool.poetry]
name = "mdspyutils"
version = "0.1.0"
description = "A pPython package to help the MDS Students to manage their labs in iPython notebooks and R Markdown"
authors = ["Sukhdeep kaur <sukhdeep_2929@yahoo.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
