[tool.poetry]
name = "labzen"
version = "0.1.0"
description = "A Python package to help the MDS Students to manage their labs in iPython notebooks"
authors = ["Sukhdeep kaur <sukhdeep_2929@yahoo.com>", "Rafael Pilliard Hellwig", "Kamal Moravej Jahromi"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
